--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
     "jquery": "^3.7.0",
     "pinia": "^2.1.4",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.31.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
@@ -20,11 +23,14 @@
     "@rushstack/eslint-patch": "^1.3.2",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-prettier": "^8.0.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.45.0",
     "eslint-plugin-vue": "^9.15.1",
+    "postcss": "^8.4.27",
     "prettier": "^3.0.0",
     "sass": "^1.64.1",
     "sass-loader": "^13.3.2",
+    "tailwindcss": "^3.3.3",
     "vite": "^4.4.6"
   }
 }
